# Smart_Search_Engine

./: README.md  app.py  index.html  pyproject.toml
